<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="27dp"
                android:layout_marginRight="27dp"
                android:layout_marginBottom="60dp"
                android:layout_marginTop="60dp">
                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/ic_tq"
                    android:layout_marginEnd="12dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/logo_tq" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:layout_gravity="center"
                    android:textSize="32sp"
                    android:textColor="@color/colorAccent"/>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/ly_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="27dp"
                android:layout_marginRight="27dp"
                app:cardCornerRadius="8dp"
                android:background="@android:color/white"
                android:elevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Buat Akun Baru"
                        android:textStyle="bold"
                        android:textSize="30sp"
                        android:textColor="@color/colorAccent"
                        android:layout_marginBottom="10dp"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:hint="@string/full_name"
                            android:selectAllOnFocus="true"
                            android:layout_marginBottom="12dp">

                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:hint="@string/prompt_email"
                            android:selectAllOnFocus="true"
                            android:layout_marginBottom="12dp">

                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_password"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:selectAllOnFocus="true"
                            android:inputType="textPassword"
                            android:drawableEnd="@drawable/ic_visibility_off"
                            android:imeOptions="actionDone"
                            android:layout_marginBottom="12dp">

                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/confirm_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/confirm_pass"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:selectAllOnFocus="true"
                            android:inputType="textPassword"
                            android:drawableEnd="@drawable/ic_visibility_off"
                            android:imeOptions="actionDone"
                            android:layout_marginBottom="10dp">

                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!--    <ProgressBar-->
            <!--        android:id="@+id/loading"-->
            <!--        android:layout_width="wrap_content"-->
            <!--        android:layout_height="wrap_content"-->
            <!--        android:layout_gravity="center"-->
            <!--        android:visibility="visible" />-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="27dp"
                android:layout_marginRight="27dp"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/bismillah" />

                <Button
                    android:id="@+id/daftar"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="0.8"
                    android:text="@string/registration"
                    android:textColor="@android:color/white"
                    android:background="@drawable/rounded_green" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/you_have_an_account"
                    android:layout_marginEnd="7dp"/>

                <TextView
                    android:id="@+id/signIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/sign_in"
                    android:textColor="@color/colorAccent"/>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>